--- a/reset.css
+++ b/reset.css
@@ -23,7 +23,7 @@
     5. Improve media defaults
   */
   img, picture, video, canvas, svg {
-    display: block;
+    display:inline-block;
     max-width: 100%;
   }
   /*
